[gd_scene load_steps=5 format=3 uid="uid://de1urwb7sjgqf"]

[ext_resource type="Script" uid="uid://d0dr26oiw01h" path="res://Scripts/Entities/Monsters/MonstersScenes/base_glub.gd" id="1_fboye"]
[ext_resource type="PackedScene" uid="uid://dep1aa5ykpuvq" path="res://Scenes/Entities/Monsters/MonstersCharacters/base_glub_character.tscn" id="1_no7k1"]
[ext_resource type="PackedScene" uid="uid://dnkf5xne7pf6p" path="res://Scenes/Entities/Monsters/MonstersProjectiles/glub_projectile.tscn" id="2_qnodu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fboye"]
radius = 0.686541
height = 2.79642

[node name="BaseGlub" type="CharacterBody3D"]
script = ExtResource("1_fboye")
projectile_scene = ExtResource("2_qnodu")

[node name="mob" parent="." instance=ExtResource("1_no7k1")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.05652, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.43233, 0)
shape = SubResource("CapsuleShape3D_fboye")

[node name="output" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.18235, -0.784767)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="target" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10914, 0)

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
